fix readout spacing

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body, html {
   font-family: 'Cutive Mono', monospace;
   font-size: 13em;
   justify-self: center;
-  margin-top: 15px;
+  margin-top: 40px;
   letter-spacing: -40px;
 }
 
